# startup-pilot-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
ai/prompts/: startup_plan_system.md
ai/rag/: README.md
api/: openapi-summary.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: auth.py  documents.py  generations.py  health.py  projects.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/repositories/: base.py  generations.py  projects.py
backend/app/schemas/: auth.py  document.py  generation.py  project.py
backend/app/services/: planning.py  rag.py
database/: schema.sql
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ARCHITECTURE.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/generate/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/generators/: page.tsx
frontend/app/generators/[slug]/: page.tsx
frontend/components/: generator-workspace.tsx  sidebar.tsx
frontend/components/ui/: button.tsx
frontend/lib/: generators.ts
frontend/types/: api.ts
scripts/: dev.ps1
tests/backend/: test_planning.py  test_rag.py
